--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     //Graphs
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.5'
     //animation
     implementation "com.airbnb.android:lottie:3.4.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
