--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    //image picker
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
     //API stuff
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.navigation:navigation-ui:2.7.7'
